k8s/create/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${IMAGE}
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "192Mi"
