k8s/create/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: api
